# cardano-zk-aiken

./: .gitignore  Dockerfile  README.md  converter.py  verification_key.json
aiken-zk/: .gitignore  Cargo.toml  README.md  notes  start.sh  test.sh
aiken-zk/circuits/templates/: addition.circom  if_then_else.circom
aiken-zk/example/: inputs_sha256.json  sha256.circom  verification_key_sha256.zkey
aiken-zk/example/deployment/: contract.ts  lock.ts  unlock.ts
aiken-zk/example/validators/: example_sha256.ak  example_sha256_zk.ak
aiken-zk/example/validators_with_offchain/: example_sha256.ak
aiken-zk/milestone 2 - example/: aiken.toml  ceremony.ptau  generate_proof.sh
aiken-zk/milestone 2 - example/curve_compress/: compressedProof.js
aiken-zk/milestone 2 - example/templates/: assert_eq.circom  multiplication.circom
aiken-zk/milestone_2_example/: ceremony.ptau  inputs.json
aiken-zk/milestone_example/: CUSTOM_EXAMPLE.md  EXAMPLE.md  Makefile  aiken.toml  inputs.json  inputs_custom_circuit.json  inputs_polynomial_evaluations.json  inputs_sha256.json  my_custom_circuit.circom  package.json
aiken-zk/src/: aiken_zk_compiler.rs  build_command.rs  circom_circuit.rs  circom_compiler.rs  command_line_interface.rs  component_creator.rs  compressed_groth16_proof_bls12_381.rs  compressed_groth16_proof_bls12_381_aiken_presenter.rs  compressed_groth16_proof_bls12_381_to_meshjs_presenter.rs  entropy_generator.rs  lexer.rs  lib.rs  main.rs  meshjs_zk_redeemer_presenter.rs  parsers.rs  prove_command.rs  subcommand.rs  zk_examples.rs
aiken-zk/src/cli/: build_command.rs  (+5 more)
(+188 files in other folders)
