[package]
name = "aiken-zk"
version = "0.1.0"
edition = "2024"

[dependencies]
aiken-lang = {version = "1.1.17"}
ordinal = "0.3.2"
num-bigint = "0.4.3"
[target.'cfg(not(target_family="wasm"))'.dependencies]
chumsky = "0.9.2"
[target.'cfg(target_family="wasm")'.dependencies]
chumsky = { version = "0.9.2", features = [
    "ahash",
    "std",
], default-features = false }

[dev-dependencies]
tempfile = "3"